--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>RecetteLOLO</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Site web permettant de stocker toutes les recettes que vous voulez">
+  <meta name="description" content="Site web permettant de stocker toutes les recettes de cuisine que vous voulez, de les partager avec le reste du monde">
   <meta name="keywords" content="recette, cuisine, bo bun, bolognese">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
